# hworld

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client.txt  config.example.toml  docker-compose.yml  log.txt  pyproject.toml
.github/: changelog.ai  copilot-instructions.md
.github/proposals/: proposal-001-initial-setup.md
.github/workflows/: ci.yml
data/: client.txt  log.txt
examples/: test_client.py  webapp_demo.py
hworld/: __init__.py  __main__.py  _vendor_loader.py
hworld/client/: README.md  __init__.py  __main__.py  app.py
hworld/server/: README.md  __init__.py  __main__.py  config.py
hworld/webapp/: README.md  __init__.py  __main__.py  app.py  start.sh
hworld/webapp/static/: app.js  style.css
hworld/webapp/templates/: index.html
scripts/: docker-build.sh  docker-run.sh
