[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hworld"
version = "0.1.0"
description = "A collection of Unix-inspired tools built with Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ruckusist/hworld"
Repository = "https://github.com/ruckusist/hworld.git"
Issues = "https://github.com/ruckusist/hworld/issues"

[project.scripts]
hworld = "hworld.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
